# fileserver

./: .envrc  .gitignore  Cargo.toml  README.md  fileserver.conf
checksum/: Cargo.toml
checksum/src/: lib.rs
client/: Cargo.toml  build.rs
client/src/: client.rs  download.rs  files.rs  main.rs  stop.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs
server/: Cargo.toml  api.proto  build.rs
server/src/: config.rs  init.rs  main.rs  server.rs  start.rs
