[package]
name = "server"
version = "0.1.0"
authors = ["Vasily Kondratyev <wassily.kondratiev@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "~1"
checksum = { path = "../checksum" }
clap = "~2"
confy = "~0"
futures = "~0"
nix = "~0"
tokio = "~0"
tonic = "~0"
prost = "~0"
serde = "~1"
serde_derive = "~1"

[build-dependencies]
tonic-build = "~0"
